style.css
/* ... */
#about{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    gap: 2.5rem;
    padding: 5rem;
    background-color:#002A32;

    & #aboutimg{
        flex: 1;
        & img{
            min-width: 390px;
            width: 100%;
        }
    }
    & #aboutus-content{
        flex: 1;
        display: flex;
        flex-direction: column;
        align-items: start;
        justify-content: start;
        gap: 2rem;
        min-width: 300px;
        & h1{
            
            color: #ebebeb;
        }
        & p{
           
            color: #dddddd;
        }
    }
}

section#who-can-participate{
    background-color: #ECECECE5;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
    gap: 3rem;
    padding:50px;
    min-height: 300px;
    & h1{
        max-width: 300px;
        width: 100%;
    }
    & ul>li{
        color: #656565;
        list-style: disc;
        font-weight: 600;
        margin-bottom: 1.25rem;
    }
}

section#why-attend{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 3rem;
    padding: 4rem 2rem;

    #why-attend-grid{
        width: 100%;
        display: flex;
        flex-direction: row; 
        justify-content: space-evenly; 
        align-items:center;
        gap: 1.5rem;
        flex-wrap:wrap ;
        
        & .why-attend-card{
            display: flex;
            flex-direction: column;
            align-items: start;
            justify-content: start;
            gap: 1rem;
            width: 350px;
            min-height: 250px;
            & p{
                line-height: 2rem;
            }
        }

        
    }
}

#reg-and-screening{
    background-color: #F3F3F3;
    padding: 5rem 2rem;
    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: center;
    gap: 3rem;
    & li{
        list-style:decimal;
    }
    & #reg-pro{
        padding: 5rem ;
        background-color: white;
        color: #656565;
        line-height: 2rem;
        max-width: 1120px;
        border-radius: 1rem;
        box-shadow: 0px 5px 15px 0px #00000040;
        margin-bottom: 5rem;
        
    }
    & #screening-boxes {
        display: flex;
        width: 100%;
        max-width: 1120px;
        flex-direction: row;
        align-items: center;
        gap: 1.25rem;
        justify-content: space-between;
        & .screening-card{
            margin-top: 4rem;
            width: 100%;
            max-width: 450px;
            min-height: 450px;
            background-color: white;
            box-shadow: 0px 5px 15px 0px #00000040;
            border-radius: 1rem;
            padding: 3rem;
            padding-top: 10rem;
            position: relative;
            & .screening-no{
                position: absolute;
                top: -50px;
                left: calc(50% - 50px);
                width: 100px;
                height: 100px;
                /* background-color: red; */
                border-radius: 50px;
                display: flex;
                align-items: center;
                justify-content: center;
                font-size: 3rem;
                font-weight: 400;
                color: white;
            }  
            &:nth-child(1)>.screening-no{
                background-color: #F9A03F;
            }
            &:nth-child(2)>.screening-no{
                background-color: #489FB5;
            }
        }
    }
}

#last-expo-details{
    justify-content: space-evenly;
    align-items: flex-start;
    background-color: #F6F6F6;
    padding: 5rem;
    display: flex;
    flex-direction: row;
    gap: 2rem;
    & #details-left{
        width: 100%;
        max-width: 400px;
        display: flex;
        flex-direction: column;
        gap: 2rem;
        
        & .previous-stats{
            display: flex;
            flex-direction: row;
            justify-content: space-between;
            align-items: center;
            & .stat-value{
                display: flex;
                flex-direction: column;
                gap: 0.5rem;
                align-items:center;
                & h1{
                    font-size: 3.125rem;
                }

                & p {
                    font-size: 1.5rem;
                    font-weight: 500;
                }
                
                &:nth-child(1)>h1{
                    color: #489FB5;
                }
                &:nth-child(2)>h1{
                    color: #F9A03F;
                }
                &:nth-child(3)>h1{
                    color: #AC3931;
                }
            }
        }
    
    }

    & #details-right{
        width: 100%;
        max-width: 710px;

    }

}

#event-gallery{
    padding: 4rem;
    gap: 4rem;
    display: flex;
    flex-direction: column;
    
    & #carousel{
        height: 250px;
        width: 100%;
        /* background-color: red; */
        display: flex;
        flex-direction: row;
        place-content: center;
        gap: 1rem;
    }
    
    .carousel-contents{
        height: 100%;
        width: auto;
        display: flex;
        align-items: center;
        justify-content: start;
        gap: 2rem;
        & img{
            height: 100%;
            width: auto;
        }
    }
    .carousel-display{
        overflow: hidden;
        height: 100%;
        width: auto;
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: start;
    }
}

.car-btn{
    width: 100px;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: transparent;
    border:none;
    color: #489FB5;
    cursor:pointer;
    transition: transform 0.25s;
    &:hover{
        transform: scale(1.2)
    }
    & svg{
        width: 100%;
        height: auto;
    }
}
/* ... */

